tests/fixtures/pass/imported-function-explicit-persistence/input/main.ts
import {q} from "typestage";
import {makeValue} from "./helper";

// Intentional diagnostic: explicit splice means staging-time persistence.
export const expr = q.expr`
  ${makeValue}()
`;
